changed cursor to pointer to try to fix broken click events on mobile

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -24,6 +24,7 @@ body {
   font-family: raleway;
   color: #000033;
   font-size: 14px;
+  cursor:pointer;
 }
 
 #container {
